Add PDF parsing scripts to extract COA metadata using pdftotext
- Created parse-coas-with-pdftotext.ts to extract metadata from text-based PDFs
- Uses pdftotext command to extract text from PDFs (works where JS libraries fail)
- Extracts: completion dates, THC/CBD/Terpenes, sample IDs, batch numbers, lab names
- Successfully parsed Grape Ape Badder COA with real data:
  - Completed: 2026-01-24 (extracted from PDF)
  - THC: 72.5%
  - Sample ID: QA20260126SL6M
  - Batch: BAD-2G-THCA-GA-V2
- Identifies image-based PDFs that cannot be text-parsed
- Added npm scripts: parse-coas and parse-coas-pdftotext
- Includes test scripts for validation

--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "parse-coas": "npx tsx scripts/parse-coa-pdfs.ts",
+    "parse-coas-pdftotext": "npx tsx scripts/parse-coas-with-pdftotext.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
-    "canvas": "^3.2.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.316.0",
     "next": "^14.1.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
-    "pdfjs-dist": "^5.4.530",
+    "pdf2json": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.34.5"
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3"
   }
 }
